--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -27,6 +27,7 @@
         android:layout_height="match_parent"
         android:layout_marginTop="?actionBarSize"
         android:contentDescription="task details"
+        android:background="#1A2196F3"
         android:scrollbars="none"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -36,53 +37,37 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/main"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#1A2196F3">
-
-            <TextView
-                android:id="@+id/taskname"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
-                android:text="Task Name"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="2dp"
-                android:layout_marginTop="15dp"
-                android:text="Created By:"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:text="Added by:"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="@+id/taskname"
-                app:layout_constraintTop_toBottomOf="@+id/taskname" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/ownerName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
                 android:text="Name"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/textView4"
-                app:layout_constraintTop_toBottomOf="@+id/taskname" />
+                app:layout_constraintTop_toTopOf="@+id/textView4" />
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:text="Created Date: "
-                android:textSize="16sp"
-                android:textStyle="bold"
+                android:text="Assigning Date:"
+                android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="@+id/textView4"
                 app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
@@ -93,7 +78,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="15dp"
                 android:text="TextView"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/textView9"
                 app:layout_constraintTop_toBottomOf="@+id/ownerName" />
@@ -103,7 +88,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="25dp"
                 android:text="Task Description:"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -112,7 +97,7 @@
 
             <ImageView
                 android:id="@+id/taskFile"
-                android:layout_width="150dp"
+                android:layout_width="125dp"
                 android:layout_height="125dp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -124,8 +109,9 @@
                 android:id="@+id/taskFileName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="8dp"
                 android:text="File Name"
+                android:textColor="@color/blue"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/taskFile"
@@ -139,10 +125,11 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
+                android:background="@drawable/member_itemshape"
                 android:gravity="start"
-                android:minHeight="80dp"
                 android:padding="8dp"
                 android:text="Description of Task"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -154,8 +141,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:text="Due:"
+                android:textColor="@color/red"
                 android:textSize="18sp"
-                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/taskDescription"
                 app:layout_constraintTop_toBottomOf="@+id/taskDescription" />
 
@@ -165,6 +152,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:text="TextView"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/textView14"
@@ -178,8 +166,8 @@
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="10dp"
                 android:text="Time: "
+                android:textColor="@color/red"
                 android:textSize="18sp"
-                android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/taskEndTime"
                 app:layout_constraintTop_toBottomOf="@+id/taskDescription" />
 
@@ -189,6 +177,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="15dp"
                 android:text="TextView"
+                android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/textView16"
@@ -197,9 +186,9 @@
 
             <ImageView
                 android:id="@+id/uploadedFile"
-                android:layout_width="150dp"
+                android:layout_width="125dp"
                 android:layout_height="125dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/uploadFile"
@@ -228,6 +217,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="File Name"
+                android:textColor="@color/blue"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/uploadedFile"
@@ -238,7 +228,7 @@
                 android:id="@+id/uploadFile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="25dp"
                 android:drawableLeft="@drawable/upload"
                 android:drawablePadding="10dp"
                 android:gravity="center"
