Handled all file openings images or pdf

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -4,4 +4,9 @@
     <cache-path
         name="cache"
         path="." />
+    <external-path
+        name="external_files"
+        path="." />
+    <!-- Allow access to files under external storage -->
 </paths>
+
