Added Pie Charts

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="bblue">#0080FE</color>
     <color name="sapphire">#0F52BA</color>
     <color name="yale">#0E4C92</color>
+    <color name="darkgreen">#A64CAF50</color>
 </resources>
