--- a/app/src/main/res/layout/activity_tasks_pie_charts.xml
+++ b/app/src/main/res/layout/activity_tasks_pie_charts.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".WorkSpacesList">
+    tools:context=".TasksPieChartsActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -26,6 +26,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        tools:listitem="@layout/item_piechart"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
